[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki-claude"
authors = [
  { name="Rushikesh Jaisur", email="rushikeshjaisur11@gmail.com" }
]
license = "MIT"
readme = "README.md"
version = "0.1.2"
description = "A context engine and wiki skill runner"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

[tool.hatch.build.targets.sdist]
include = [
    "src/llm_wiki/**/*",
]
